@@ -9,8 +9,9 @@
 #include <mspack.h>
 #include <sys/stat.h>
 #include <dirent.h>
-#include "md5.h"
-#include "error.h"
+
+#include <md5.h>
+#include <error.h>
 
 #define FILENAME ".test.extract"
 
